# spotify-liked-transfer

./: .editorconfig  .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
